Fix Login and Regis API